# M-LAMA

./: .gitignore  Interspeech_2026.code-workspace  README.md  keep.sh  prompt.py  pyproject.toml  test_5_criterias.sh
Exp2_noaudio/: __init__.py  config.py  dataloader.py  evaluation_metrics.py  losses.py  model.py  test.py  test_5_criterias.sh  utils.py
Exp2_noaudio/config/: config.yaml  config_fluency.yaml  config_pronunciation.yaml
Exp2_notext/: README.md  __init__.py  config.py  dataloader.py  evaluation_metrics.py  model.py  test.py  test_5_criterias.sh  train.py  train.sh  trainer.py
Exp2_notext/config/: config.yaml  config_content.yaml  config_fluency.yaml  config_vocabulary.yaml
Model/: Run.sh  __init__.py  audio_encoders.py  check.py  check_eval_chunks.py  check_model_params.py  config.py  dataloader.py  infer.sh  model.py  quick_check.py  test.ipynb  test.py  test_new.py  text_processing.py  train.py  train.sh  trainer.py  utils.py
Model/.ipynb_checkpoints/: Run-checkpoint.sh  dataloader-checkpoint.py  losses-checkpoint.py  model-checkpoint.py  train-checkpoint.py  utils-checkpoint.py
Model/ablation_Q_aware/: __init__.py  ablation_qaware.py  run_qaware.sh
Model/ablation_longaudio_weight/: __init__.py  ablation_chunk_importance.py  run_ablation.sh
Model/config/: config.yaml  (+3 more)
mlama/: __init__.py  cli.py  modeling.py  reproducibility.py
model_old/: Run.sh  Run_test.sh  evaluate_result.py  infer_old.sh  new_loss.py  prepare_merged_data.py  test_old_model.py  text_processing.py  train_W2VAudio_bycandidates.py  train_W2VAudio_bycandidates_V2.py
(+22 files in other folders)
